<resources>
    <string name="app_name">Estudio Android</string>
    <string name="sharedpreferences">SharedPreferences</string>
    <string name="name">Name</string>
    <string name="are_you_vip">Are you vip ?</string>
    <string name="continue_btn">Continue</string>
    <string name="logout">Logout</string>
    <string name="datastore_preferences_alternative_to_shareredpreferences">DataStore Preferences </string>
    <string name="navigate_to_the_second_activity">Navigate to the second activity</string>
    <string name="hello_android">Hello Android</string>
    <string name="navigate_to_the_first_activity">Navigate to the first activity</string>
    <string name="navigate_activity">Navigate Activity</string>
    <string name="navigate_fragment">Navigate Fragment</string>
    <string name="hint_user">User</string>
    <string name="hint_password">password</string>
    <string name="button_login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flash_mode">flash mode</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
</resources>