<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".sharedPreferences.SharedPreferences">

    <EditText
        android:hint="@string/name"
        android:id="@+id/etName"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cbVip"
        android:text="@string/are_you_vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnContinue"
        android:text="@string/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>