<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="20dp"
    android:layout_marginHorizontal="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/NavigateActivity"
        android:textColorHint="@color/white"
        android:hint="@string/navigate_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Fragment"
        android:textColorHint="@color/white"
        android:hint="@string/navigate_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sharedPreferences"
        android:textColorHint="@color/white"
        android:hint="@string/sharedpreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dataStoreView"
        android:textColorHint="@color/white"
        android:hint="@string/datastore_preferences_alternative_to_shareredpreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/MovieApp"
        android:textColorHint="@color/white"
        android:hint="MovieApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/BlogApp"
        android:textColorHint="@color/white"
        android:hint="BlogApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>