<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/hint_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>